--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,10 @@ jobs:
         run: pnpm lint
       - name: Build
         run: pnpm build
+      - name: Start server
+        run: pnpm start &
+      - name: Wait for server
+        run: npx wait-on http://localhost:3000
       - name: Lighthouse CI
         run: pnpm dlx @lhci/cli@latest autorun --upload.target=temporary-public-storage
       - name: Axe accessibility check
