--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,8 @@ jobs:
         run: pnpm lint
       - name: Build
         run: pnpm build
+      - name: Bundle budgets
+        run: pnpm ci:budgets
       - name: Start server
         run: pnpm start &
       - name: Wait for server
