--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "format": "prettier --write .",
-    "ci:check": "pnpm typecheck && pnpm lint"
+    "ci:check": "pnpm typecheck && pnpm lint",
+    "ci:budgets": "node scripts/check-budgets.mjs"
   },
   "dependencies": {
     "react": "19.1.0",
