--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "typecheck": "tsc --noEmit",
     "format": "prettier --write .",
     "ci:check": "pnpm typecheck && pnpm lint",
-    "ci:budgets": "node scripts/check-budgets.mjs"
+    "ci:budgets": "node scripts/check-budgets.mjs",
+    "test": "vitest run"
   },
   "dependencies": {
     "react": "19.1.0",
@@ -27,6 +28,11 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "@eslint/eslintrc": "^3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@types/testing-library__jest-dom": "^6.0.0",
+    "jsdom": "^25.0.1",
+    "vitest": "^2.0.5",
     "prettier": "^3",
     "@lhci/cli": "^0.13.0",
     "@axe-core/cli": "^4.10.0"
