--- a/package.json
+++ b/package.json
@@ -14,27 +14,26 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "next": "15.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.4.6"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@axe-core/cli": "^4.10.0",
+    "@eslint/eslintrc": "^3",
+    "@lhci/cli": "^0.13.0",
+    "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
-    "@eslint/eslintrc": "^3",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.0.1",
-    "@types/testing-library__jest-dom": "^6.0.0",
     "jsdom": "^25.0.1",
-    "vitest": "^2.0.5",
     "prettier": "^3",
-    "@lhci/cli": "^0.13.0",
-    "@axe-core/cli": "^4.10.0"
+    "tailwindcss": "^4",
+    "typescript": "^5",
+    "vitest": "^2.0.5"
   }
 }
