--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
+    "gsap": "^3.13.0",
     "jsdom": "^25.0.1",
     "prettier": "^3",
     "tailwindcss": "^4",
