--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "lenis": "^1.3.8",
     "next": "15.4.6",
     "nodemailer": "^7.0.5",
     "react": "19.1.0",
